src/parser/.antlr/GrammarParser.java
// Generated from d:\ClaseTercero\SegundoCuatri\DLP\DLP\src\parser\Grammar.g4 by ANTLR 4.8

    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, IDENT=50, INT_CONSTANT=51, REAL_CONSTANT=52, 
		CHAR_CONSTANT=53, LINE_COMMENT=54, MULTILINE_COMMENT=55, WHITESPACE=56;
	public static final int
		RULE_start = 0, RULE_clase = 1, RULE_constructores = 2, RULE_atributosOpt = 3, 
		RULE_atributos = 4, RULE_deftuple = 5, RULE_simpleDef = 6, RULE_multiDef = 7, 
		RULE_listaidents = 8, RULE_tipo = 9, RULE_metodo = 10, RULE_parametrosOpt = 11, 
		RULE_returnType = 12, RULE_localDefOpt = 13, RULE_listaparametros = 14, 
		RULE_parametro = 15, RULE_sentencia = 16, RULE_exprOpt = 17, RULE_asignacion = 18, 
		RULE_elseOpt = 19, RULE_fromOpt = 20, RULE_expr = 21, RULE_listaexpresionOpt = 22, 
		RULE_listaexpresion = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "clase", "constructores", "atributosOpt", "atributos", "deftuple", 
			"simpleDef", "multiDef", "listaidents", "tipo", "metodo", "parametrosOpt", 
			"returnType", "localDefOpt", "listaparametros", "parametro", "sentencia", 
			"exprOpt", "asignacion", "elseOpt", "fromOpt", "expr", "listaexpresionOpt", 
			"listaexpresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'('", "')'", "';'", "'end'", "'class'", "'create'", 
			"'global'", "'types'", "'vars'", "'deftuple'", "'as'", "':'", "','", 
			"'['", "']'", "'INTEGER'", "'CHARACTER'", "'DOUBLE'", "'feature'", "'is'", 
			"'do'", "'local'", "'print'", "'println'", "'read'", "'if'", "'then'", 
			"'until'", "'loop'", "'return'", "':='", "'else'", "'from'", "'.'", "'-'", 
			"'not'", "'to'", "'<'", "'>'", "'*'", "'/'", "'+'", "'>='", "'<='", "'='", 
			"'<>'", "'and'", "'or'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "IDENT", "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public ClaseContext clase;
		public Token IDENT;
		public ListaexpresionOptContext listaexpresionOpt;
		public ClaseContext clase() {
			return getRuleContext(ClaseContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ListaexpresionOptContext listaexpresionOpt() {
			return getRuleContext(ListaexpresionOptContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			((StartContext)_localctx).clase = clase();
			setState(49);
			match(T__0);
			setState(50);
			((StartContext)_localctx).IDENT = match(IDENT);
			setState(51);
			match(T__1);
			setState(52);
			((StartContext)_localctx).listaexpresionOpt = listaexpresionOpt();
			setState(53);
			match(T__2);
			setState(54);
			match(T__3);
			setState(55);
			match(T__4);
			((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).clase.ast, new MethodCallSentence(((StartContext)_localctx).IDENT, ((StartContext)_localctx).listaexpresionOpt.list));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClaseContext extends ParserRuleContext {
		public ClassNode ast;
		public Token nombreClase;
		public AtributosOptContext atributosOpt;
		public ConstructoresContext constructores;
		public MetodoContext metodo;
		public List<MetodoContext> lm = new ArrayList<MetodoContext>();
		public AtributosOptContext atributosOpt() {
			return getRuleContext(AtributosOptContext.class,0);
		}
		public ConstructoresContext constructores() {
			return getRuleContext(ConstructoresContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public List<MetodoContext> metodo() {
			return getRuleContexts(MetodoContext.class);
		}
		public MetodoContext metodo(int i) {
			return getRuleContext(MetodoContext.class,i);
		}
		public ClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clase; }
	}

	public final ClaseContext clase() throws RecognitionException {
		ClaseContext _localctx = new ClaseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_clase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__5);
			setState(59);
			((ClaseContext)_localctx).nombreClase = match(IDENT);
			setState(60);
			match(T__3);
			setState(61);
			((ClaseContext)_localctx).atributosOpt = atributosOpt();
			setState(62);
			match(T__6);
			setState(63);
			((ClaseContext)_localctx).constructores = constructores();
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				((ClaseContext)_localctx).metodo = metodo();
				((ClaseContext)_localctx).lm.add(((ClaseContext)_localctx).metodo);
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__19 );
			setState(69);
			match(T__4);
			((ClaseContext)_localctx).ast =  new ClassNode((((ClaseContext)_localctx).nombreClase!=null?((ClaseContext)_localctx).nombreClase.getText():null), ((ClaseContext)_localctx).atributosOpt.list, ((ClaseContext)_localctx).constructores.list, ((ClaseContext)_localctx).lm);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructoresContext extends ParserRuleContext {
		public List<String> list = new ArrayList<String>();
		public Token IDENT;
		public List<TerminalNode> IDENT() { return getTokens(GrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarParser.IDENT, i);
		}
		public ConstructoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructores; }
	}

	public final ConstructoresContext constructores() throws RecognitionException {
		ConstructoresContext _localctx = new ConstructoresContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constructores);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				((ConstructoresContext)_localctx).IDENT = match(IDENT);
				setState(73);
				match(T__3);
				_localctx.list.add((((ConstructoresContext)_localctx).IDENT!=null?((ConstructoresContext)_localctx).IDENT.getText():null));
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtributosOptContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public AtributosContext atributos;
		public AtributosContext atributos() {
			return getRuleContext(AtributosContext.class,0);
		}
		public AtributosOptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributosOpt; }
	}

	public final AtributosOptContext atributosOpt() throws RecognitionException {
		AtributosOptContext _localctx = new AtributosOptContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atributosOpt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(79);
				((AtributosOptContext)_localctx).atributos = atributos();
				((AtributosOptContext)_localctx).list =  ((AtributosOptContext)_localctx).atributos.list;
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtributosContext extends ParserRuleContext {
		public List<Definition> list = new ArrayList<Definition>();
		public DeftupleContext deftuple;
		public MultiDefContext multiDef;
		public List<DeftupleContext> deftuple() {
			return getRuleContexts(DeftupleContext.class);
		}
		public DeftupleContext deftuple(int i) {
			return getRuleContext(DeftupleContext.class,i);
		}
		public List<MultiDefContext> multiDef() {
			return getRuleContexts(MultiDefContext.class);
		}
		public MultiDefContext multiDef(int i) {
			return getRuleContext(MultiDefContext.class,i);
		}
		public AtributosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributos; }
	}

	public final AtributosContext atributos() throws RecognitionException {
		AtributosContext _localctx = new AtributosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_atributos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__7);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(85);
				match(T__8);
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__10) {
					{
					{
					setState(86);
					((AtributosContext)_localctx).deftuple = deftuple();
					_localctx.list.add(((AtributosContext)_localctx).deftuple.ast);
					}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(96);
				match(T__9);
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENT) {
					{
					{
					setState(97);
					((AtributosContext)_localctx).multiDef = multiDef();
					_localctx.list.add(((AtributosContext)_localctx).multiDef.ast);
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeftupleContext extends ParserRuleContext {
		public Definition ast;
		public Token name;
		public SimpleDefContext simpleDef;
		public List<SimpleDefContext> ls = new ArrayList<SimpleDefContext>();
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public List<SimpleDefContext> simpleDef() {
			return getRuleContexts(SimpleDefContext.class);
		}
		public SimpleDefContext simpleDef(int i) {
			return getRuleContext(SimpleDefContext.class,i);
		}
		public DeftupleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deftuple; }
	}

	public final DeftupleContext deftuple() throws RecognitionException {
		DeftupleContext _localctx = new DeftupleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_deftuple);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__10);
			setState(108);
			((DeftupleContext)_localctx).name = match(IDENT);
			setState(109);
			match(T__11);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(110);
				((DeftupleContext)_localctx).simpleDef = simpleDef();
				((DeftupleContext)_localctx).ls.add(((DeftupleContext)_localctx).simpleDef);
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(T__4);
			((DeftupleContext)_localctx).ast =  new TupleDefinition((((DeftupleContext)_localctx).name!=null?((DeftupleContext)_localctx).name.getText():null), ((DeftupleContext)_localctx).ls);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleDefContext extends ParserRuleContext {
		public Definition ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public SimpleDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleDef; }
	}

	public final SimpleDefContext simpleDef() throws RecognitionException {
		SimpleDefContext _localctx = new SimpleDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simpleDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((SimpleDefContext)_localctx).IDENT = match(IDENT);
			setState(120);
			match(T__12);
			setState(121);
			((SimpleDefContext)_localctx).tipo = tipo();
			setState(122);
			match(T__3);
			List<Token> list = new ArrayList<Token>();
									list.add(((SimpleDefContext)_localctx).IDENT);
					((SimpleDefContext)_localctx).ast =  new VarDefinition(list, ((SimpleDefContext)_localctx).tipo.ast);
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiDefContext extends ParserRuleContext {
		public Definition ast;
		public ListaidentsContext listaidents;
		public TipoContext tipo;
		public ListaidentsContext listaidents() {
			return getRuleContext(ListaidentsContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public MultiDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiDef; }
	}

	public final MultiDefContext multiDef() throws RecognitionException {
		MultiDefContext _localctx = new MultiDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_multiDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			((MultiDefContext)_localctx).listaidents = listaidents();
			setState(126);
			match(T__12);
			setState(127);
			((MultiDefContext)_localctx).tipo = tipo();
			setState(128);
			match(T__3);
			((MultiDefContext)_localctx).ast =  new VarDefinition(((MultiDefContext)_localctx).listaidents.list, ((MultiDefContext)_localctx).tipo.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaidentsContext extends ParserRuleContext {
		public List<Token> list = new ArrayList<Token>();
		public Token IDENT;
		public List<TerminalNode> IDENT() { return getTokens(GrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarParser.IDENT, i);
		}
		public ListaidentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaidents; }
	}

	public final ListaidentsContext listaidents() throws RecognitionException {
		ListaidentsContext _localctx = new ListaidentsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listaidents);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			((ListaidentsContext)_localctx).IDENT = match(IDENT);
			_localctx.list.add(((ListaidentsContext)_localctx).IDENT);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(133);
				match(T__13);
				setState(134);
				((ListaidentsContext)_localctx).IDENT = match(IDENT);
				_localctx.list.add(((ListaidentsContext)_localctx).IDENT);
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public Type ast;
		public Token INT_CONSTANT;
		public TipoContext tipo;
		public Token IDENT;
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(GrammarParser.INT_CONSTANT, 0); }
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tipo);
		try {
			setState(156);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__14:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(141);
				match(T__14);
				setState(142);
				((TipoContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				setState(143);
				match(T__15);
				}
				setState(145);
				((TipoContext)_localctx).tipo = tipo();
				((TipoContext)_localctx).ast =  new ArrayType(((TipoContext)_localctx).INT_CONSTANT, ((TipoContext)_localctx).tipo.ast);
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				match(T__16);
				((TipoContext)_localctx).ast =  new IntType();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				match(T__17);
				((TipoContext)_localctx).ast =  new CharType();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 4);
				{
				setState(152);
				match(T__18);
				((TipoContext)_localctx).ast =  new RealType();
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(154);
				((TipoContext)_localctx).IDENT = match(IDENT);
				((TipoContext)_localctx).ast =  new StructType((((TipoContext)_localctx).IDENT!=null?((TipoContext)_localctx).IDENT.getText():null));
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MetodoContext extends ParserRuleContext {
		public Method ast;
		public Token IDENT;
		public ParametrosOptContext parametrosOpt;
		public ReturnTypeContext returnType;
		public LocalDefOptContext localDefOpt;
		public SentenciaContext sentencia;
		public List<SentenciaContext> ls = new ArrayList<SentenciaContext>();
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParametrosOptContext parametrosOpt() {
			return getRuleContext(ParametrosOptContext.class,0);
		}
		public LocalDefOptContext localDefOpt() {
			return getRuleContext(LocalDefOptContext.class,0);
		}
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public MetodoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metodo; }
	}

	public final MetodoContext metodo() throws RecognitionException {
		MetodoContext _localctx = new MetodoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_metodo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(T__19);
			setState(159);
			((MetodoContext)_localctx).IDENT = match(IDENT);
			setState(160);
			((MetodoContext)_localctx).parametrosOpt = parametrosOpt();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(161);
				((MetodoContext)_localctx).returnType = returnType();
				}
			}

			setState(164);
			match(T__20);
			setState(165);
			((MetodoContext)_localctx).localDefOpt = localDefOpt();
			setState(166);
			match(T__21);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__28) | (1L << T__30) | (1L << T__33) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << IDENT) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
				{
				{
				setState(167);
				((MetodoContext)_localctx).sentencia = sentencia();
				((MetodoContext)_localctx).ls.add(((MetodoContext)_localctx).sentencia);
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			match(T__4);
			((MetodoContext)_localctx).ast =  new Method((((MetodoContext)_localctx).IDENT!=null?((MetodoContext)_localctx).IDENT.getText():null), ((MetodoContext)_localctx).parametrosOpt.list, _localctx.returnType != null ? ((MetodoContext)_localctx).returnType.ast : new VoidType(), ((MetodoContext)_localctx).localDefOpt.list, ((MetodoContext)_localctx).ls);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosOptContext extends ParserRuleContext {
		public List<Parameter> list = new ArrayList<Parameter>();
		public ListaparametrosContext listaparametros;
		public ListaparametrosContext listaparametros() {
			return getRuleContext(ListaparametrosContext.class,0);
		}
		public ParametrosOptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametrosOpt; }
	}
